# testdjango

./: .env.example  LICENSE  docker-compose.yml
backup/: db_backup_20240503150330.sql
nginx/: Dockerfile  nginx.conf
nginx/servers/: site.conf
src/: backend.dockerfile  entrypoint.sh  pyproject.toml
src/config/: settings.py
